- [FEAT] : Új funkciók bevezetése. Az admin képes módosítani a leadott megrendelések státuszát, amiről a rendelést leadó felhasználó email értesítést kap, Gmail SMTP felhasználásával. A rendelést leadó felhasználó szintén email értesítést kap a rendelése leadásakor, illetve annak esetleges törlése esetén is. Ezen új funkciók okán az OrderContorller, Program.cs, Order, AppDbContext, appsettings.json módosításra, míg az OrderStatus, EmailService és IEmailService pedig létrehozásra került.

--- a/.gitignore
+++ b/.gitignore
@@ -364,5 +364,7 @@ FodyWeavers.xsd
 
 # Ignore frontend folder
 AutoPartsShop.UI/
-AutoPartsShop.UI 
+AutoPartsShop.UI
+# Sensitive config files
+AutoPartsShop.API/appsettings.json
  
